day2/07_gateway_api/httproute-uri.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-uri
spec:
  parentRefs:
    - name: training-gateway
  hostnames:
    - demo.127-0-0-1.nip.io
  rules:
    # /api/* → Python z D1/10 (port 5002)
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: python-service
          port: 5002
    # / → demo nginx (z app.yaml)
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-app
          port: 80
